--- a/requirements.txt
+++ b/requirements.txt
@@ -7,5 +7,9 @@ langchain-community
 langchain-experimental
 python-dotenv
 tqdm
-llama_index           # optional but handy if you extend the app
+llama_index
 typing-extensions>=4.9
+
+# Excel engines
+openpyxl        # reads .xlsx
+xlrd<2.0.0      # reads .xls
